enable complete validation of SwiftAndJavaJarSampleLib on linux